--- a/form.html
+++ b/form.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css" type="text/css">
+    <link rel="stylesheet" href="https://dimkoig1.github.io/style.css" type="text/css">
 </head>
 <body>
     <div class="wrapper">
-        <img id="logo" src="./sandoz-logo_6.svg" alt="Sandoz Logo">
+        <img id="logo" src="https://dimkoig1.github.io/sandoz-logo_6.svg" alt="Sandoz Logo">
         <div id="pattern"></div>
         <div id="form">
             <div id="api">
