test from personal PC

--- a/form-test.html
+++ b/form-test.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="test">
         <img id="logo" src="./sandoz-logo_6.svg" alt="Sandoz Logo">
         <div id="pattern"></div>
         <div id="form">
