--- a/form-test.html
+++ b/form-test.html
@@ -3,13 +3,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" type="text/css">
+    <script src="./jquery-3.7.0.min.js"></script>
 </head>
 <body>
     <div class="wrapper" id="test">
         <img id="logo" src="./sandoz-logo_6.svg" alt="Sandoz Logo">
         <div id="pattern"></div>
         <div id="form">
-            <h1>Register</h1>
+            
             <div id="api">
               <div class="buttons">
               </div>
