--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://dimkoig1.github.io/style.css" type="text/css">
+    <link rel="stylesheet" href="https://dimkoig1.github.io/style.css" type="text/css" data-preload="true">
 </head>
 <body>
     <div class="wrapper">
